--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,125 @@
 doc/.DS_Store
 .DS_Store
+res
+res/img_100000-1cm-CPUonly/S1_0.jpg
+res/img_100000-1cm-CPUonly/S1_500.jpg
+res/img_100000-1cm-CPUonly/S1_1000.jpg
+res/img_100000-1cm-CPUonly/S1_1500.jpg
+res/img_100000-1cm-CPUonly/S1_2000.jpg
+res/img_100000-1cm-CPUonly/S1_2500.jpg
+res/img_100000-1cm-CPUonly/S1_3000.jpg
+res/img_100000-1cm-CPUonly/S1_3500.jpg
+res/img_100000-1cm-CPUonly/S1_4000.jpg
+res/img_100000-1cm-CPUonly/S1_4500.jpg
+res/img_100000-1cm-CPUonly/S1_5000.jpg
+res/img_100000-1cm-CPUonly/S1_5500.jpg
+res/img_100000-1cm-CPUonly/S1_6000.jpg
+res/img_100000-1cm-CPUonly/S1_6500.jpg
+res/img_100000-1cm-CPUonly/S1_7000.jpg
+res/img_100000-1cm-CPUonly/S1_7500.jpg
+res/img_100000-1cm-CPUonly/S1_8000.jpg
+res/img_100000-1cm-CPUonly/S1_8500.jpg
+res/img_100000-1cm-CPUonly/S1_9000.jpg
+res/img_100000-1cm-CPUonly/S1_9500.jpg
+res/img_100000-1cm-CPUonly/S1_10000.jpg
+res/img_100000-1cm-CPUonly/S1_10500.jpg
+res/img_100000-1cm-CPUonly/S1_11000.jpg
+res/img_100000-1cm-CPUonly/S1_11500.jpg
+res/img_100000-1cm-CPUonly/S1_12000.jpg
+res/img_100000-1cm-CPUonly/S1_12500.jpg
+res/img_100000-1cm-CPUonly/S1_13000.jpg
+res/img_100000-1cm-CPUonly/S1_13500.jpg
+res/img_100000-1cm-CPUonly/S1_14000.jpg
+res/img_100000-1cm-CPUonly/S1_14500.jpg
+res/img_100000-1cm-CPUonly/S1_15000.jpg
+res/img_100000-1cm-CPUonly/S1_15500.jpg
+res/img_100000-1cm-CPUonly/S1_16000.jpg
+res/img_100000-1cm-CPUonly/S1_16500.jpg
+res/img_100000-1cm-CPUonly/S1_17000.jpg
+res/img_100000-1cm-CPUonly/S1_17500.jpg
+res/img_100000-1cm-CPUonly/S1_18000.jpg
+res/img_100000-1cm-CPUonly/S1_18500.jpg
+res/img_100000-1cm-CPUonly/S1_19000.jpg
+res/img_100000-1cm-CPUonly/S1_19500.jpg
+res/img_100000-1cm-CPUonly/S1_20000.jpg
+res/img_100000-1cm-CPUonly/S1_20500.jpg
+res/img_100000-1cm-CPUonly/S1_21000.jpg
+res/img_100000-1cm-CPUonly/S1_21500.jpg
+res/img_100000-1cm-CPUonly/S1_22000.jpg
+res/img_100000-1cm-CPUonly/S1_22500.jpg
+res/img_100000-1cm-CPUonly/S1_23000.jpg
+res/img_100000-1cm-CPUonly/S1_23500.jpg
+res/img_100000-1cm-CPUonly/S1_24000.jpg
+res/img_100000-1cm-CPUonly/S1_24500.jpg
+res/img_100000-1cm-CPUonly/S1_25000.jpg
+res/img_100000-1cm-CPUonly/S1_25500.jpg
+res/img_100000-1cm-CPUonly/S1_26000.jpg
+res/img_100000-1cm-CPUonly/S1_26500.jpg
+res/img_100000-1cm-CPUonly/S1_27000.jpg
+res/img_100000-1cm-CPUonly/S1_27500.jpg
+res/img_100000-1cm-CPUonly/S1_28000.jpg
+res/img_100000-1cm-CPUonly/S1_28500.jpg
+res/img_100000-1cm-CPUonly/S1_29000.jpg
+res/img_100000-1cm-CPUonly/S1_29500.jpg
+res/img_100000-1cm-CPUonly/S1_30000.jpg
+res/img_500000-6mm-CPU+GPU/S1_0.jpg
+res/img_500000-6mm-CPU+GPU/S1_500.jpg
+res/img_500000-6mm-CPU+GPU/S1_1000.jpg
+res/img_500000-6mm-CPU+GPU/S1_1500.jpg
+res/img_500000-6mm-CPU+GPU/S1_2000.jpg
+res/img_500000-6mm-CPU+GPU/S1_2500.jpg
+res/img_500000-6mm-CPU+GPU/S1_3000.jpg
+res/img_500000-6mm-CPU+GPU/S1_3500.jpg
+res/img_500000-6mm-CPU+GPU/S1_4000.jpg
+res/img_500000-6mm-CPU+GPU/S1_4500.jpg
+res/img_500000-6mm-CPU+GPU/S1_5000.jpg
+res/img_500000-6mm-CPU+GPU/S1_5500.jpg
+res/img_500000-6mm-CPU+GPU/S1_6000.jpg
+res/img_500000-6mm-CPU+GPU/S1_6500.jpg
+res/img_500000-6mm-CPU+GPU/S1_7000.jpg
+res/img_500000-6mm-CPU+GPU/S1_7500.jpg
+res/img_500000-6mm-CPU+GPU/S1_8000.jpg
+res/img_500000-6mm-CPU+GPU/S1_8500.jpg
+res/img_500000-6mm-CPU+GPU/S1_9000.jpg
+res/img_500000-6mm-CPU+GPU/S1_9500.jpg
+res/img_500000-6mm-CPU+GPU/S1_10000.jpg
+res/img_500000-6mm-CPU+GPU/S1_10500.jpg
+res/img_500000-6mm-CPU+GPU/S1_11000.jpg
+res/img_500000-6mm-CPU+GPU/S1_11500.jpg
+res/img_500000-6mm-CPU+GPU/S1_12000.jpg
+res/img_500000-6mm-CPU+GPU/S1_12500.jpg
+res/img_500000-6mm-CPU+GPU/S1_13000.jpg
+res/img_500000-6mm-CPU+GPU/S1_13500.jpg
+res/img_500000-6mm-CPU+GPU/S1_14000.jpg
+res/img_500000-6mm-CPU+GPU/S1_14500.jpg
+res/img_500000-6mm-CPU+GPU/S1_15000.jpg
+res/img_500000-6mm-CPU+GPU/S1_15500.jpg
+res/img_500000-6mm-CPU+GPU/S1_16000.jpg
+res/img_500000-6mm-CPU+GPU/S1_16500.jpg
+res/img_500000-6mm-CPU+GPU/S1_17000.jpg
+res/img_500000-6mm-CPU+GPU/S1_17500.jpg
+res/img_500000-6mm-CPU+GPU/S1_18000.jpg
+res/img_500000-6mm-CPU+GPU/S1_18500.jpg
+res/img_500000-6mm-CPU+GPU/S1_19000.jpg
+res/img_500000-6mm-CPU+GPU/S1_19500.jpg
+res/img_500000-6mm-CPU+GPU/S1_20000.jpg
+res/img_500000-6mm-CPU+GPU/S1_20500.jpg
+res/img_500000-6mm-CPU+GPU/S1_21000.jpg
+res/img_500000-6mm-CPU+GPU/S1_21500.jpg
+res/img_500000-6mm-CPU+GPU/S1_22000.jpg
+res/img_500000-6mm-CPU+GPU/S1_22500.jpg
+res/img_500000-6mm-CPU+GPU/S1_23000.jpg
+res/img_500000-6mm-CPU+GPU/S1_23500.jpg
+res/img_500000-6mm-CPU+GPU/S1_24000.jpg
+res/img_500000-6mm-CPU+GPU/S1_24500.jpg
+res/img_500000-6mm-CPU+GPU/S1_25000.jpg
+res/img_500000-6mm-CPU+GPU/S1_25500.jpg
+res/img_500000-6mm-CPU+GPU/S1_26000.jpg
+res/img_500000-6mm-CPU+GPU/S1_26500.jpg
+res/img_500000-6mm-CPU+GPU/S1_27000.jpg
+res/img_500000-6mm-CPU+GPU/S1_27500.jpg
+res/img_500000-6mm-CPU+GPU/S1_28000.jpg
+res/img_500000-6mm-CPU+GPU/S1_28500.jpg
+res/img_500000-6mm-CPU+GPU/S1_29000.jpg
+res/img_500000-6mm-CPU+GPU/S1_29500.jpg
+res/img_500000-6mm-CPU+GPU/S1_30000.jpg
