--- a/sample2.in
+++ b/sample2.in
@@ -1,13 +1,14 @@
 units si
 
-atom_style sphere 0
+atom_style sphere 
 newton on
 
+variable dz equal ramp(0,-0.75)
+variable dia equal 0.006
+variable neighDis equal ${dia}*0.5
 
-variable dz equal ramp(0,-0.3)
-
-region REG0 block -0.4 0.4 -0.15 0.15 0 2 side in units box
-region REG1 block -0.4 0.4 -0.15 0.15 0.45 0.5 side in units box
+region REG0 block -0.4 0.4 -0.15 0.15 0 0.5 side in units box
+region REG2 cylinder z 0 0 0.1 0.75 1.25 side out units box move NULL NULL v_dz
 
 create_box 1 REG0
 change_box all boundary f f f
@@ -15,32 +16,28 @@ change_box all boundary f f f
 pair_style gran/hooke/history 1000.0 NULL 1000.0 NULL 0.5 0
 pair_coeff	* *
 
-comm_style brick
 comm_modify vel yes
 
-neighbor 0.1 bin
+neighbor ${neighDis} bin
+neigh_modify delay 0 every 1 check yes
 
 fix BOX1 all nve/sphere
 fix GRAV all gravity 9.81 vector 0 0 -1
 
-fix WALL0 all wall/gran/region hooke/history 1000.0 NULL 1000.0 NULL 0.5 0 region REG0
-fix WALL1 all wall/gran/region hooke/history 1000.0 NULL 1000.0 NULL 0.5 0 region REG1
+fix WALL0 all wall/gran/region hooke/history 10000.0 4000.0 0.1 0.2 0.5 1 region REG0
+fix WALL2 all wall/gran/region hooke/history 10000.0 4000.0 0.1 0.2 0.5 1 region REG2
 
-fix INS all pour 2000 1 300719 vol 0.1 10 region REG1 diam one 0.035 dens 1 2
-
-compute     PRES0 all pressure TEMP0  
+create_atoms 1 random 500000 1 NULL 
+set atom * diameter ${dia} density 2650
 
 timestep    0.0001
 
-thermo_style	custom elapsed atoms
-thermo		    1000
-thermo_modify   lost ignore
+compute COMP1 all coord/atom cutoff ${neighDis}
 
-run     30000
+thermo_style custom elapsed atoms v_dz
+thermo 500
+thermo_modify lost ignore
 
-unfix   INS
+dump d0 all image 500 img/S1_*.jpg type type adiam ${dia}
 
-region  REG2 cylinder z 0 0 0.1 0.35 0.8 side out units box move NULL NULL v_dz
-fix     WALL2 all wall/gran/region hooke/history 100.0 100.0 1.0 1.0 0.5 0 region REG2
-
-run     20000
+run 30000
